<resources>
    <!--https://jeroenmols.com/blog/2016/03/07/resourcenaming/-->

    <!--Valores de texto-->
    <string name="all_app_name">MeuCarro</string>
    <string name="all_title_activity">MeuCarro</string>

    <!--All-->
    <string name="all_alchooltext">Álcool</string>
    <string name="all_gastext">Gasolina</string>
    <string name="all_day_text">Dia</string>
    <string name="all_month_text">Mês</string>
    <string name="all_year_text">Ano</string>

    <!--Login Scren-->
    <string name="login_logar">Logar</string>
    <string name="logincadastro_emailhint">Email</string>
    <string name="logincadastro_senhahint">Senha</string>
    <string name="login_cadastratext">Cadastrar Nova Conta</string>

    <!--CadastroActivity-->
    <string name="cadastro_cadastrartext">Cadastrar</string>

    <!--GasCalculatorFragment-->
    <string name="gascalculator_calculate_text">Calcular</string>
    <string name="gascalculator_brazilian_currency_symbol">R$</string>
    <string name="gascalculator_efficiency_text">Eficiência</string>
    <string name="gascalculator_default_price">0.000</string>
    <string name="gascalculator_expense_by_time">Despesas/tempo</string>

    <!--ExpenseReportActivity-->
    <string name="choose_expense_type">Escolha o tipo de despesa</string>
    <string name="choose_expense_car">Escolha o carro</string>
    <string name="choose_expense_year">Escolha o ano</string>

    <!--TrocarCarroActivity-->
    <string name="trocarcarro_trocartext">Trocar</string>

    <!--AdicionarCarroActivity-->
    <string name="adicionarcarro_adicionartext">Adicionar</string>
    <string name="adicionarcarro_carroscadastradostext">Adicione novo Carro</string>
    <string name="adicionarcarro_dadoscarrotext">Dados sobre o carro:</string>

    <!--HomeActivity-->
    <string name="home_carroatualtext">Carro</string>
    <string name="home_listadegastostext">Histórico de Gastos</string>
    <string name="home_kmsrodadostext">Km\'s Rodados</string>

    <!--ProfileActivity-->
    <string name="profile_text">Perfil</string>
    <string name="username_text">Nome</string>
    <string name="user_email_text">Email</string>
    <string name="user_password_text">Senha</string>
    <string name="user_phone_text">Telefone</string>
    <string name="user_zipcode_text">CEP</string>
    <string name="save_button">Salvar</string>

    <!--Menu-->
    <string name="menu_logout">Logout</string>
    <string name="menu_adicionar_carro_string">Adicionar carro</string>
    <string name="menu_trocarcarro">Trocar carro</string>
    <string name="menu_calculadora_bicombust">Calculadora Bicombustível</string>
    <string name="menu_relatoriogastos">Relatório de gastos</string>

    <!--AdicionarGastoDialog-->
    <string name="adicionardialog_valorhint">Valor</string>
    <string name="adicionardialog_adicionarbuttontext">Adicionar</string>
    <string name="adicionardialog_kmatualtext">Quilometragem</string>
    <string name="valor_unidade_combustivel_dialog">Valor por Litros ou m³</string>

    <!--AdicionarOficinaDialog-->
    <string name="adicionardialog_oficinaname">Nome da Oficina</string>
    <string name="adicionardialog_oficinaend">Endereço da Oficina</string>
    <string name="adicionardialog_oficinatel">Telefone da Oficina</string>

    <!--Mensagens do sistema-->
    <string name="msg_cadastro_sucesso">Cadastro realizado com sucesso</string>
    <string name="msg_home_listacarrosvazia">Nenhum carro selecionado, adicione um carro para começar.</string>

    <!--Mensagens de erro-->
    <string name="erro_formato_valor">Insira um valor válido</string>
    <string name="erro_email_senha_vazio">Campo de email ou senha vazio.</string>
    <string name="erro_adicionargasto_vazio">Valor do gasto ou quilometragem vazio.</string>
    <string name="erro_adicionargasto_quilometragem_menor">Quilometragem nova não pode ser menor que já registrada.</string>
    <string name="erro_adicionargasto_dataposterior">Data escolhida não pode ser posterior ao dia atual.</string>
    <string name="erro_nenhum_gasto">Nenhum gasto registrado.</string>
    <string name="erro_trocarcarro_zero_carros">Adicione um carro para poder trocar.</string>
    <string name="erro_trocarcarro_nenhumaselecao">Selecione um carro para trocar.</string>
    <string name="adicionarcarro_placaletrashint">ABC</string>
    <string name="menu_status_do_carro">Status do Carro</string>
    <string name="erro_adicionargasto_quilmetragem_maior">Quilometragem em data passada tem que ser menor</string>
    <string name="erro_oficina_nome">Insira um nome para a oficina</string>
    <string name="erro_oficina_endereco">Insira um endereço para a oficina</string>
    <string name="erro_oficina_telefone">Insira um telefone para a oficina</string>
    <string name="choose_car">Escolha o carro</string>
    <string name="perfilactivity_sucesso">Atualizado com sucesso</string>
    <string name="home_precofipetxt">Preço Fipe</string>
    <string name="home_removergasto_title">Remover gasto</string>
    <string name="home_removergasto_text">Deseja remover gasto?</string>
    <string name="home_removergasto_confirm">Sim</string>
    <string name="home_removergasto_reject">Não</string>
    <string name="vendacarro_textbutton">Confirmar</string>
    <string name="vendacarro_senhaconfirmacaoedit">Senha para venda</string>
    <string name="vendacarro_valoredit">Valor do carro</string>
    <string name="erro_vendacarro_valorvazio">Há um valor vazio.</string>
    <string name="erro_vendacarro_completarperfil">Complete seu perfil (nome, telefone e CEP) para poder vender</string>

    <!--Arrays-->
    <string-array name="adicionardialog_gastosarray">
        <item>Combustível</item>
        <item>Troca de Óleo</item>
        <item>Troca de Pneu</item>
        <item>IPVA</item>
        <item>Compra de Peças</item>
        <item>Correia Dentada</item>
        <item>Filtro Ar Condicionado</item>
        <item>Filtro de Ar</item>
        <item>Velas</item>
        <item>Revisão</item>
    </string-array>


    <string name="title_activity_marketplace">Marketplace</string>
    <string name="marketplace_seusanunciostext">Seus anúncios</string>
    <string name="marketplace_anunciosglobaistext">Anúncios globais</string>
    <string name="marketplace_removeranunciotitle">Remover anúncio</string>
    <string name="marketplace_removeranunciomessage">Deseja remover seu anúncio?</string>
    <string name="comprarcarrodialog_senhatransterenciahin">Senha de transferência</string>
    <string name="comprarcarrodialog_trasnferenciabtntext">Enviar Oferta</string>
    <string name="erro_comprardialog_senhavazia">Campo de senha vazio.</string>
    <string name="erro_comprardialog_senhaincorreta">Senha incorreta, tente novamente.</string>
    <string name="vendacarro_mensagemsucesso">Carro anunciado com sucesso!</string>
    <string name="criarvendadialog_erronenhumcarro">Adicione um carro para anunciar.</string>
    <string name="criarvendadialog_errosenhapequena">Senha tem que ter ao menos 6 caracteres</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="trocarcarro_msgsucesso">Carro atual trocado.</string>
    <string name="adicionarcarro_msgsucesso">Novo carro adicionado.</string>
    <string name="compracarrodialog_msgsucesso">Oferta feita com sucesso.</string>
    <string name="title_activity_main">CarAssist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="oficina_dialog_removertitle">Remover oficina?</string>
    <string name="oficina_dialog_removetext">Deseja remover oficina da lista?</string>
    <string name="comprarcarrodialog_cancelarbtntxt">Cancelar Oferta</string>
    <string name="erro_comprardialognaooferta">Não há nenhuma oferta</string>
    <string name="compracarrodialog_msgjaexisteoferta">Já existe uma oferta por esse carro, espere o vendedor.</string>
    <string name="compracarrodialog_msgofertacancelada">Sua oferta foi cancelada.</string>
    <string name="confirmarvendadialog_nenhumcompradormsg">Nenhum comprador</string>
    <string name="adicionarcarro_msgerroplacaletras">Primeira parte da placa tem que ter 3 letras.</string>
    <string name="adicionarcarro_msgerroplacanumeros">Segunda parte da placa tem que ter 4 números.</string>
    <string name="profileactivity_cephint">00000-000</string>

    <string-array name="distancias">
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
    </string-array>

</resources>
