<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile_text" />
    <item
        android:id="@+id/menu_trocar_carro"
        android:title="@string/menu_trocarcarro" />

    <item
        android:id="@+id/menu_adicionar_carro"
        android:title="@string/menu_adicionar_carro_string" />

    <item
        android:id="@+id/menu_calculadora"
        android:title="@string/menu_calculadora_bicombust" />

    <item
        android:id="@+id/expenses_report_menu"
        android:title="@string/menu_relatoriogastos" />

    <item
        android:id="@+id/menu_status_carro"
        android:title="@string/menu_status_do_carro" />

    <item
        android:id="@+id/menu_oficina"
        android:title="Oficinas" />

    <item
        android:id="@+id/menu_compararcarro"
        android:title="Comparar Carro" />

    <item
        android:id="@+id/menu_venda_carro"
        android:title="Vender carro" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout" />
</menu>